<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">NevegApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_mappa">Mappa</string>
    <string name="title_punti">Punti</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="action_settings">Impostazioni</string>
    <string name="opzioni_condividi">Condividi</string>
    <string name="opzioni_licenza">Licenza</string>
    <string name="opzioni_guida">Guida</string>
    <string name="opzioni_crediti">Crediti</string>
    <string name="opzioni_bibliografia">Fonti</string>
    <string name="opzioni_esci">Esci</string>
    <string name="opzioni_aboutNevegapp">About NevegApp</string>
    <string name="opzioni_aboutUs">About us</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="pulsante_sensori">Bussola</string>
    <string name="pozizione_ancora_nulla">Attendi un attimo, il gps sta cercando la tua posizione...</string>
    <string name="nome_sezione_storia">storia</string>
    <string name="nome_sezione_fauna">fauna</string>
    <string name="nome_sezione_flora">flora</string>
    <string name="nome_sezione_turismo">turismo</string>
    <string name="nome_sezione_geologia">geologia</string>
    <string name="title_activity_group_view_test">GroupViewTest</string>
    <string name="title_activity_menu_punto">MenuPuntoActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_tematiche">Sezioni</string>
    <string name="nome_grid">Tematiche</string>
    <string name="storia_grid">Storia</string>
    <string name="turismo_grid">Turismo</string>
    <string name="fauna_grid">Fauna</string>
    <string name="flora_grid">Flora</string>
    <string name="geologia_grid">Geologia</string>
    <string name="linkeContatti">Link e Contatti</string>
    <string name="varie">Varie</string>
    <string name="descrizione">Descrizioni</string>
    <string name="galleria">Galleria</string>
    <string name="title_activity_menu_sezione">MenuSezioneActivity</string>
    <string name="descrizione_punto_1">Spettacolare balcone affacciato sulle Dolomiti</string>
    <string name="descrizione_punto_2">Palestra di roccia su falesia calcarea con vista spettacolare sul Lago di Santa Croce</string>
    <string name="descrizione_punto_3">Un panoramico belvedere sulla conca dell\’Alpago, sul Cansiglio e sul Lago di Santa Croce</string>
    <string name="descrizione_punto_4">Il sentiero che percorriamo attraversa zone a morfologia carsica; lungo il tracciato sono visibili alcune doline</string>
    <string name="descrizione_punto_5">Di fronte a noi si apre l\'altopiano del Cansiglio; ben visibile la frana attiva del Fadalto.</string>
    <string name="descrizione_punto_6">Un gioiellino da non perdere: il Giardino Botanico delle Alpi Orientali</string>
    <string name="descrizione_punto_7">Punto di arrivo della seggiovia, il Rifugio Brigata Cadore è attualmente chiuso al pubblico</string>
    <string name="descrizione_punto_8">Il sentiero delle creste è un vero e proprio balcone verso le Dolomiti e verso la pianura</string>
    <string name="descrizione_punto_9">Siamo giunti a metà del nostro percorso, e ci si offre la possibilità di fare una tappa al Rifugio Visentin</string>
    <string name="descrizione_punto_10">Possiamo osservare piante adattate agli ombrosi versanti  settentrionali delle creste</string>
    <string name="descrizione_punto_11">Mirtilli e rododendri costituiscono un ottimo rifugio per i Tetraonidi che frequentano la zona</string>
    <string name="descrizione_punto_12">Siamo giunti al rifugio Bristot, caratteristico locale situato nel cuore del comprensorio sciistico</string>
    <string name="contenuto_Crediti"><b><big><i>Team NevegApp Developers</i></big></b>\n\n<i>\t Davide Bergamasco\n\t Massimo Stefan</i>\n\n<b><i>Design e stile</i></b>\n\n\t<i> Gabriele Savi</i>\n\n<b><i>Project management e supervisione</i></b>\n\n\t<i> Viola Anesin\n\t Arianna Sitta\n\t Mariapaola Colleselli</i>\n\n <b><i>Elaborazione contenuti</i></b>\n\n\t <i>Serena Fistarol\n\t Sara Dazzi\n\t Anna Tollot\n\t Sofia Macrì\n\t Piero Novelli</i></string>
    <string name="contenuto_aboutUs">Siamo un gruppo di studenti di Belluno, appartenenti a 3 scuole diverse, che hanno aderito al progetto \"NevegApp\", proposto dalle scuole: \n\n\t <li>I.I.S. Segato-Brustolon</li>\n\n\t <li>Liceo Scientifico Galileo Galilei</li>\n\n\t <li>I.T.E. P.F. Calvi</li>\n\n<a href ="nevegapp@gmail.com">nevegapp@gmail.com</a></string>
    <string name="contenuto_bibliografia"><b><big>SITOGRAFIA</big></b>\n\nhttp://www.parcodolomitifriulane.it\nhttps://agricoltura.regione.emilia-romagna.it/\nwww.dolomitipark.it\nhttps://www.dolomitiunesco.it/\nhttp://www.damidami.it/pluginAppObj_117_04/carta_vocazioni_faunistiche_veneto.pdf\nhttp://www.alpedelnevegal.it/giardino-botanico/\nhttp://www.rifugiocolvisentin.net/\nwww.monacovenezia.it\nhttps://www.granraid.it/it/il-territorio/cenni-di-geologia.php\nhttp://ricerca.gelocal.it/corrierealpi/archivio/corrierealpi/2005/02/12/BLYPO_BLY01.html\nhttp://www.floraitaliae.actaplantarum.org\nhttp://venetodolomiti2011nevegal.blogspot.it/\nhttps://it.wikipedia.org/wiki/XII_Universiade_invernale\nhttps://www.caymanchem.com/msdss/9000760m.pdf\nhttps://it.wikipedia.org/wiki/Nevegàl\nhttp://www.centrograndicarnivori.it/conoscere-il-lupo\nhttp://www.agriturismoveneto.org\nhttp://www.alpedelnevegal.it\nhttp://www.ilmountainrider.com/itinerari/nevegal/\nhttp://dryades.units.it/dolomitibellunesi/\nhttp://www.dolomia.it/it/magazine/rododendro-alpino/\n\n<b><big>BIBLIOGRAFIA</big></b>\n\n<li>“Guida alle falesie di Belluno, Alpago, Val Cellina, Feltrino, Valle del Piave (ediz. 2.0)” – di Luca Bridda</li>\n\n<li>“Pesci, Anfibi, Rettili, Uccelli, Mammiferi del Bellunese” di Ivan Fossa Tipografia Piave, 1988</li>\n\n<li>“Il cinghiale sull’arco alpino: status e gestione delle popolazioni” di Andrea Monaco, Lucilla Carnevali, Francesco Riga, Silvano Toso</li>\n\n<li>“Linee guida per la gestione del cinghiale” di Monaco et al, Ministero delle Politiche Agricole e Forestali</li>\n\n<li>“Guida al giardino botanico delle Alpi orientali e alla riserva naturale integrale di monte Faverghera”  pubblicazione del Corpo Forestale Dello Stato</li>\n\n<li>“Cucina e tradizione nel Veneto”  a cura di  Istituti alberghieri del Veneto</li>\n\n<li>“In Alto-Cronaca Bimestrale della Società Alpina Friulana, 1902, XIII pag 5-11” testo di Olinto Marinelli</li>\n\n<li>Info private da una ricerca effettuata da Simone Tormen: “L’alpeggio in Visentin”</li>\n\n<li>“1891-1991. Cento anni di CAI a Belluno” di Arrigoni et al.. Tamari ed.(1991)</li>\n\n<li>“Storia di Belluno- dalla Preistoria all’età contemporanea”- a cura di Filippo Gullino, Cierre Ed.(2009)</li>\n\n<li>“Ecosistema Dolomiti”  di Michele Zanetti, Duck ed. (2004)</li>\n\n<li>“Geografia generale” di Massimo Crippa e  Marco Fiorani, ed. Arnoldo Mondadori Scuola</li>\n\n<li>“Carta Geologica D’Italia, note illustrative del F°063 Belluno” di V. Costa, C. Doglioni, P. Grandesso, D. Masetti, G.B Pellegrini, E. Tracanella; ed. Servizio Geologico d’Italia</li>\n\n<li>“Carta Geomorfologica d’Italia, foglio 063 Belluno” di  G.B Pellegrini; ed. Servizio Geologico d’Italia</li>\n\n<li>“Corso di geomorfologia ed ecologia in Alpago A N° 8153”  ed. Fondazione Giovanni Angelini</li>\n\n<li>“Geologia della provincia di Belluno” di Luigi Caneve; ed. Istituto Bellunese Ricerche Sociali e Culturali</li>\n\n<li>“Turismo e tempo libero in una città alpina” di Ferruccio Vendramini, Ed. Tipografia Piave (2000)</li>\n\n<li>“L’universo delle piante medicinali” di Ernesto Riva, Tassotti ed. (1995)</li>\n\n<li>Tesi di laurea in tecnologie forestali e ambientali  “Habitat del Fagiano di monte (Lyrurus tetrix L.) in una stazione al margine dell’areale (Nevegal, Belluno) “  Laureando: Carlo De Francesco</li>\n\n<li>“Nevegal Col Visentin “– G. Sani e M. Dal Mas   Tamari ed. (2003)</li>\n\n<li>“Visentin – cent’anni di un rifugio” di Mario Dell’Eva edito dalla Sezione Alpini di Belluno</li>\n\n<li>“Pharmacon” di Ernesto Riva, GV ed. (2005)</li>\n\n<li>“La medicina dei semplici”  di Ugo Scortegagna, Duck edizioni (2008)</li>\n\n<li>“La Comunità Montana delle Prealpi Trevigiane. Appunti di Geologia, Morfologia e Idrografia”  di M. Piccin,  in La Rivista quadrimestrale di studi vittoriesi Il Flaminio n°2, 1980.  Edita dalla Comunità Montana delle Prealpi Trevigianae</li>\n\n<li>Informazioni sul lupo fornite dalla Provincia di Belluno, servizio di Polizia Provinciale</li></string>
    <string name="contenuto_aboutNevegApp"><b><big>ABOUT NEVEGAPP</big></b>\n\nIl gruppo di Nevegapp desidera ringraziare tutti coloro che hanno collaborato in vario modo alla riuscita del progetto.\nIn particolare siamo grati alle seguenti associazioni/enti/imprese (in ordine alfabetico):\n\n<b>Associazione Nevegallika</b>\n<b>Biblioteca del Comune di Belluno</b>\n<b>Comune di Belluno</b>\n<b>Fondazione Giovanni Angelini</b>\n<b>Larin Group</b>\n<b>Provincia di Belluno - Corpo di Polizia Provinciale</b>\n\ne alle persone che ci hanno fornito aiuto, dati, fonti specifiche(in ordine alfabetico):\n\n<b>Michele Cassol</b>\n<b>Carlo De Francesco</b>\n<b>Ivan Ducapa</b>\n<b>Giovanni Grazioli</b>\n<b>Christian Losso</b>\n<b>Alberto Scariot</b>\n<b>Valentina Tomasi</b>\n<b>Simone Tormen</b>\n\nRingraziamo infine i Dirigenti delle scuole a cui apparteniamo, per averci sostenuto e incoraggiato nell’iniziativa:\n\n<b>Carmelo Correnti</b>\n<b>Renata Dal Farra</b>\n<b>Salvatore Russotto</b></string>
    <string name="marker">Premendo su una di queste icone si vedrà il nome del punto e, con un secondo click nell\'infobox apparso, verrà visualizzata la descrizione completa del punto.</string>
    <string name="originalMap">Questo simbolo centrerà la visione nel centro della mappa in modo da visionarla completamente.</string>
    <string name="posAttuale">Questa icona porterà il centro della visione sulla tua posizione  nella mappa attraverso il GPS.</string>
    <string name="frecce">Queste frecce consentono di muoversi facilmente fra le tappe del percorso.</string>
    <string name="bussola">Questa icona, posta in alto a destra, ti consente di visualizzare la bussola.</string>
    <string name="mappa">Visualizza la mappa.</string>
    <string name="punti">Visualizza la parte dei punti da cui potrai accedere alle specifiche di ognuno di essi.</string>
    <string name="sezioni">Visualizza l\'elenco delle sezioni sotto cui sono state suddivise le informazioni dei punti.</string>
</resources>